--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Box Move Colorizer</title>
 </head>
 
-<h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Box Colorizer</h1>
+<h1>Box Colorizer</h1>
 <section class="flexer_section">
    <!-- main square -->
    <div class="outer">
